--- a/index.html
+++ b/index.html
@@ -50,34 +50,31 @@
             </fieldset>
         </div>
 
-        <div class="board" id="hidden">
-            <div class="piece" data-x="-1" data-y="1">
-                o
-            </div>
-            <div class="piece" data-x="0" data-y="1">
+        <div class="board" id="">
+            <button class="piece" data-x="0" data-y="2">
+            </button>
+            <button class="piece" data-x="1" data-y="2">
 
-            </div>
-            <div class="piece" data-x="1" data-y="1">
+            </button>
+            <button class="piece" data-x="2" data-y="2">
 
-            </div>
-            <div class="piece" data-x="-1" data-y="0">
+            </button>
+            <button class="piece" data-x="0" data-y="1">
 
-            </div>
-            <div class="piece" data-x="0" data-y="0">
-                x
-            </div>
-            <div class="piece" data-x="1" data-y="0">
+            </button>
+            <button class="piece" data-x="1" data-y="1">
+            </button>
+            <button class="piece" data-x="2" data-y="1">
 
-            </div>
-            <div class="piece" data-x="-1" data-y="-1">
+            </button>
+            <button class="piece" data-x="0" data-y="0">
 
-            </div>
-            <div class="piece" data-x="0" data-y="-1">
+            </button>
+            <button class="piece" data-x="1" data-y="0">
 
-            </div>
-            <div class="piece" data-x="1" data-y="-1">
-                x
-            </div>
+            </button>
+            <button class="piece" data-x="2" data-y="0">
+            </button>
         </div>
     </main>
 
