Complete adding AI and tracking game scoring between matches
TODO:
- Animations for css
- Players select difficulty (currently its random chance between 1-100% CPU messes up)
- Better CSS styling for the page in general
- Message to denote whose turn it is
- CPU has delay in its actions maybe
- Refactor to make code more extensible and less... hacky

--- a/index.html
+++ b/index.html
@@ -82,12 +82,14 @@
         Created by imHenryMa
     </footer>
 
-    <div class="pop-up game-end" id="hidden">
-        <div class="msg">### Has won!</div>
-        <fieldset class="game-end-options">
-            <button class="next">Next Round</button>
-            <button class="restart">Restart</button>
-        </fieldset>
+    <div class="pop-up" id="hidden"> 
+        <div class="game-end">
+            <div class="msg">### has won!</div>
+            <fieldset class="game-end-options">
+                <button class="next">Next Round</button>
+                <button class="restart">Restart</button>
+            </fieldset>
+        </div>
     </div>
 </body>
 </html>
